# open-cv-experience

./: .gitignore  CMakeLists.txt  README.md
resources/models/mobilenet_ssd_1/: classes.txt
src/: main.cpp
src/detector/: ChangeDetector.cpp  ChangeDetector.h  DnnObjectDetector.cpp  DnnObjectDetector.h  Object.cpp  Object.h  ObjectDetector.cpp  ObjectDetector.h  YoloObjectDetector.cpp  YoloObjectDetector.h
src/detector/factory/: DetectorFactory.cpp  DetectorFactory.h
src/recorder/: VideoRecorder.cpp  VideoRecorder.h
src/tcp/: TCPClient.cpp  TCPClient.h  server.cpp  server.h
src/thread/: ObjectDetectorThread.cpp  ObjectDetectorThread.h
